--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "native-base": "^2.1.2",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.4"
+    "react-native": "0.43.4",
+    "react-native-maps": "0.13.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
