--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "native-base": "^2.1.2",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
-    "react-native-maps": "0.13.0"
+    "react-native-maps": "0.13.0",
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
