--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-datepicker": "^1.4.7",
+    "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-maps": "0.13.0",
     "react-native-vector-icons": "^4.0.1"
