--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native-datepicker": "^1.4.7",
     "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
+    "react-native-gesture-recognizers": "^0.2.3",
     "react-native-maps": "0.13.0",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
