--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-native-drawer": "^2.3.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-gesture-recognizers": "^0.2.3",
+    "react-native-google-location": "^0.2.0",
     "react-native-maps": "0.13.0",
     "react-native-swipe-gestures": "^1.0.2",
-    "react-native-vector-icons": "^4.0.1"
+    "react-native-vector-icons": "^4.0.1",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
