--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-google-location": "^0.2.0",
     "react-native-maps": "0.13.0",
     "react-native-swipe-gestures": "^1.0.2",
+    "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.1",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
